SIS/force-app/main/default/objects/Programme_Application__c/Programme_Application__c.object-meta.xml
<CustomObject>
    <label>Programme Application</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Programme Application No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programme Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>