SIS/force-app/main/default/objects/Programme_Application__c/fields/Conditional_Code__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Code__c</fullName>
    <label>Conditional Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>