SIS/force-app/main/default/objects/Programme_Application__c/fields/CRM_Programme_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Programme_ID__c</fullName>
    <formula>CASESAFEID(Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Programme ID</label>
    <type>Text</type>
</CustomField>