SIS/force-app/main/default/objects/Programme_Application__c/fields/CRM_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Student_ID__c</fullName>
    <formula>CASESAFEID(Student__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Student ID</label>
    <type>Text</type>
</CustomField>