SIS/force-app/main/default/objects/Programme_Application__c/fields/EMX_ID__c.field-meta.xml
<CustomField>
    <fullName>EMX_ID__c</fullName>
    <label>EMX ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>