SIS/force-app/main/default/objects/Programme_Application__c/fields/Immigration_Pass_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Pass_Expiry_Date__c</fullName>
    <label>Immigration Pass Expiry Date</label>
    <type>Date</type>
</CustomField>