SIS/force-app/main/default/objects/Programme_Application__c/fields/Immigration_Pass_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Pass_Institution_Name__c</fullName>
    <label>Immigration Pass Institution Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>