SIS/force-app/main/default/objects/Programme_Application__c/fields/Intake_Master__c.field-meta.xml
<CustomField>
    <fullName>Intake_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intake Master</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Intake Master record does not belong to the chosen Programme Master.</errorMessage>
        <filterItems>
            <field>Intake_Master__c.Programme_Master__c</field>
            <operation>equals</operation>
            <valueField>$Source.Programme_Master__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Intake_Master__c</referenceTo>
    <relationshipLabel>Programme Applications</relationshipLabel>
    <relationshipName>Programme_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>