SIS/force-app/main/default/objects/Programme_Application__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Programme_Application_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fees related</fullName>
            </value>
            <value>
                <fullName>Scholarship related</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Job related</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Sibling rejection</fullName>
            </value>
            <value>
                <fullName>Programme</fullName>
            </value>
            <value>
                <fullName>Bad review/ WOM</fullName>
            </value>
            <value>
                <fullName>Accommodation/ facilities</fullName>
            </value>
            <value>
                <fullName>Unwilling to disclose</fullName>
            </value>
            <value>
                <fullName>Not eligible to join</fullName>
                <isActive>false</isActive>
                <label>Not eligible to join</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>