SIS/force-app/main/default/objects/Programme_Application__c/fields/Offer_Letter_Printed_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Printed_Date__c</fullName>
    <label>Offer Date</label>
    <type>Date</type>
</CustomField>