SIS/force-app/main/default/objects/Programme_Application__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending For Approval</fullName>
                <default>true</default>
                <label>Pending For Approval</label>
            </value>
            <value>
                <fullName>Full Offer</fullName>
            </value>
            <value>
                <fullName>Conditional Offer</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>