SIS/force-app/main/default/objects/Programme_Application__c/fields/Programme_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Programme_Application_Status__c</fullName>
    <label>Programme Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Pre-enroll</fullName>
            </value>
            <value>
                <fullName>Pending Enrollment</fullName>
            </value>
            <value>
                <fullName>RA/e-RA</fullName>
            </value>
            <value>
                <fullName>Declined (Lost)</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>