SIS/force-app/main/default/objects/Programme_Application__c/fields/Programme_Master__c.field-meta.xml
<CustomField>
    <fullName>Programme_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Programme Master</label>
    <referenceTo>Programme_Master__c</referenceTo>
    <relationshipLabel>Programme Applications</relationshipLabel>
    <relationshipName>Programme_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>