SIS/force-app/main/default/objects/Programme_Application__c/fields/Registration_Fee_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Fee Payment Received</label>
    <type>Checkbox</type>
</CustomField>