SIS/force-app/main/default/objects/Programme_Application__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Programme Applications</relationshipLabel>
    <relationshipName>Programme_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>