SIS/force-app/main/default/objects/Programme_Application__c/recordTypes/International_Student.recordType-meta.xml
<RecordType>
    <fullName>International_Student</fullName>
    <active>true</active>
    <label>International Student</label>
</RecordType>