SIS/force-app/main/default/objects/Programme_Application__c/recordTypes/Malaysian_Student.recordType-meta.xml
<RecordType>
    <fullName>Malaysian_Student</fullName>
    <active>true</active>
    <label>Malaysian Student</label>
</RecordType>