SIS/force-app/main/default/objects/Programme_Application__c/validationRules/SIS_Make_All_Fields_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Make_All_Fields_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(EMX_ID__c)),
  OR(
    ISCHANGED(Student__c),
    ISCHANGED(Programme_Master__c),
    ISCHANGED(Intake_Master__c),
    ISCHANGED(PIC__c),
    ISCHANGED(Application_Type__c),
    ISCHANGED(Immigration_Pass_Type__c),
    ISCHANGED(Immigration_Pass_Institution_Name__c),
    ISCHANGED(Immigration_Pass_Expiry_Date__c),
    ISCHANGED( OwnerId ),
    ISCHANGED( RecordTypeId )
  ),
  OR(
    $Profile.Name = &quot;Admissions Marketing&quot;,
    $Profile.Name = &quot;Admissions and IO&quot;
  )
)</errorConditionFormula>
    <errorMessage>You cannot edit the fields once the Programme Application Status changes to &apos;Pre-enroll&apos;.</errorMessage>
</ValidationRule>